# webtor-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPARISON.md  Cargo.toml  GEMINI.md  PROJECT_SUMMARY.md  README.md  arti-patches.patch  build.sh  deny.toml  package.json  reproduce-vendor-arti.sh  rust-toolchain.toml
.agents/skills/formal-verification-guard/: README.md  SKILL.md  adversarial_prompts.md  checklists.md
.agents/skills/formal-verification-guard/scripts/: check_numeric_claim.py  run_verification_plan.py
.agents/skills/formal-verification-guard/templates/: claim_dossier.md
.devin/: wiki.json
.github/workflows/: deploy-example.yml  docs-verify.yml  kani.yml  release-wasm.yml  security.yml  test.yml  wasm-build.yml
docs/: FEATURES.md  consensus_diffs.md
example/: build.sh
scripts/: fetch-consensus.sh
subtle-tls/: Cargo.toml  README.md
subtle-tls/src/: cert.rs  crypto.rs  handshake.rs  handshake_1_2.rs  lib.rs  prf.rs  record.rs  record_1_2.rs  stream.rs  stream_1_2.rs  trust_store.rs
subtle-tls/tests/: edge_case_tests.rs  integration_tests.rs  tls12_browser_tests.rs
tests/e2e/: test-benchmark.mjs  test-example.mjs  test-headless.mjs  test-http-only.mjs  test-https-alpn.mjs
tests/utils/: cors-proxy.mjs
webtor/: Cargo.toml
webtor-demo/: Cargo.toml
webtor-demo/src/: lib.rs
webtor-demo/static/: index.html
webtor-demo/static/pkg/: webtor_demo.d.ts  webtor_demo.js  webtor_demo_bg.wasm.d.ts
webtor-wasm/: Cargo.toml
webtor-wasm/src/: lib.rs  websocket.rs
webtor/benches/: circuit_params.rs  tor_benchmark.rs
webtor/fuzz/: Cargo.toml
webtor/src/: circuit.rs  client.rs  config.rs  directory.rs  error.rs  http.rs  isolation.rs  kcp_stream.rs  lib.rs  relay.rs  retry.rs  smux.rs  snowflake.rs  snowflake_broker.rs  snowflake_ws.rs  time.rs  tls.rs  turbo.rs  wasm_runtime.rs  webrtc_stream.rs  websocket.rs  webtunnel.rs
webtor/src/cached/: consensus.txt.br  fetched_at.txt  microdescriptors.txt.br
webtor/tests/: e2e.rs  integration_test.rs
