[workspace]
members = [
    "webtor",
    "webtor-wasm",
    "webtor-demo"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Webtor Contributors"]
license = "MIT"
repository = "https://github.com/voltrevo/webtor-rs"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.69", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "ReadableStream",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "Text",
    "Node",
    "NodeList",
    "DocumentFragment",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "KeyboardEvent",
    "Blob",
    "FileReader",
    "Response",
    "Request",
    "Headers",
    "RequestInit"
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
futures = "0.3"
http = "1.1"
url = "2.5"
tracing = "0.1"
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# Tor-related dependencies
tor-rtcompat = { version = "0.36.0", default-features = false }
tor-proto = { version = "0.36.0", default-features = false }
tor-netdoc = { version = "0.36.0", default-features = false }
tor-linkspec = "0.36.0"
tor-llcrypto = "0.36.0"
tor-cell = "0.36.0"
tor-error = "0.36.0"
tor-async-utils = "0.36.0"
tor-memquota = "0.36.0"
tor-protover = "0.36.0"
tor-units = "0.36.0"

# Cryptography
rsa = "0.9"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha1 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"

# Async runtime
wasm-bindgen-test = "0.3"

[patch.crates-io]
tor-basic-utils = { path = "vendor/arti/crates/tor-basic-utils" }