[package]
name = "webtor-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for webtor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webtor = { path = "../webtor" }
http = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Async runtime for WASM
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-wasm = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"] }
# Use gloo-console or simple wrapper for console_log!
gloo-console = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
console_error_panic_hook = "0.1"

# Random number generation for WASM
getrandom = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
