[package]
name = "webtor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Tor client implementation for web browsers"

[dependencies]
# Core async runtime
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tor protocol implementation
tor-rtcompat = { workspace = true }
tor-proto = { workspace = true }
tor-protover = { workspace = true }
tor-units = { workspace = true }
tor-netdoc = { workspace = true }
tor-linkspec = { workspace = true }
tor-llcrypto = { workspace = true }
tor-cell = { workspace = true }
tor-error = { workspace = true }
tor-async-utils = { workspace = true }
tor-memquota = { workspace = true }
wasm-bindgen-futures = { workspace = true }

# Cryptography
rsa = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
sha1 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Networking
url = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
httparse = "1.10.1"
tor-checkable = "0.36.0"
tokio-rustls = "0.25"
rustls = "0.22"
webpki-roots = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio-test = "0.4"
